--- a/src/dblog/template/layout.html
+++ b/src/dblog/template/layout.html
@@ -15,7 +15,24 @@
   </head>
   <body>
     {% include 'includes/header.html' %}
-    <div class="container mt-5">
+
+    <div class="container my-3  pb-5">
+      <div class="row pb-2 mb-3 border-bottom">
+        <div class="col-8">
+          <h1 class="m-0">{% block page_title %}{% endblock page_title %}</h1>
+        </div>
+        <div class="col-4 d-flex justify-content-end align-items-end">
+          <div class="btn-group">
+            <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              {% trans "Sırala" %}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              {% block ordering %}{% endblock ordering %}
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <div class="row">
         <div class="col-12">
           {% block body %}{% endblock body %}
@@ -28,6 +45,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/15f914e3a8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
 
   </body>
 </html>
