--- a/src/dblog/template/blog/post_list.html
+++ b/src/dblog/template/blog/post_list.html
@@ -6,31 +6,92 @@
 
 {% block title %}{% trans "Blog" %}{% endblock title %}
 
-{% block page_title %}{% trans "Blog" %}{% endblock page_title %}
-
-{% block ordering %}
-{% for value, label in ordering_form.order_by.field.choices %}
-<a class="dropdown-item" href="?{% url_replace request 'order_by' value %}"><i class="{% get_ordering_icon_class value %}"></i> {{ label }}</a>
-{% endfor %}
-{% endblock ordering %}
-
 {% block body %}
+<div class="row pb-2 mb-3 border-bottom">
+  <div class="col-8">
+    <h1 class="m-0"><a href="{% url 'post_list' %}" class="text-decoration-none">{% trans "Blog" %}</a></h1>
+  </div>
+  <div class="col-4 d-flex justify-content-end align-items-end">
 
-<div class="row row-cols-1 row-cols-md-4 g-2">
-  {% for post in post_list %}
-  <div class="col">
-    <div class="card h-100">
-      <img src="{% if post.cover %}{{ post.cover.url }}{% else %}https://dummyimage.com/200x200/dedede/000000.jpg&text=No+Image{% endif %}" class="card-img-top" alt="{{ post.title }}">
-      <div class="card-body">
-        <h5 class="card-title">{{ post.title }}</h5>
-        <p class="card-text">{{ post.content|truncatechars:150 }}</p>
+    <!-- Ordering -->
+    <div class="btn-group">
+      <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        {% trans "Sırala" %}
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end">
+        {% for value, label in ordering_form.order_by.field.choices %}
+        <a class="dropdown-item" href="?{% url_replace request 'order_by' value %}"><i class="{% get_ordering_icon_class value %}"></i> {{ label }}</a>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <!-- Actions -->
+    <div class="btn-group ms-2">
+      <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        {% trans "İşlemler" %}
+      </button>
+      <ul class="dropdown-menu dropdown-menu-end">
+        <button type="submit" form="product_list_form" class="dropdown-item" name="action" value="example">Örnek Aksiyon</button>
+      </ul>
+    </div>
+
+    <!-- New Post-->
+    <button type="button" class="btn btn-success btn-sm ms-2" data-bs-toggle="modal" data-bs-target="#addNewPost">{% trans "Yeni Ekle" %}</button>
+
+  </div>
+</div>
+
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  {% endfor %}
+{% endif %}
+
+<!-- Post List -->
+<form id="product_list_form" method="post">{% csrf_token %}
+  <div class="row row-cols-1 row-cols-md-4 g-2">
+    {% for post in post_list %}
+    <div class="col">
+      <div class="card h-100">
+        <img src="{% if post.cover %}{{ post.cover.url }}{% else %}https://dummyimage.com/200x200/dedede/000000.jpg&text=No+Image{% endif %}" 
+            class="card-img-top" alt="{{ post.title }}">
+        <div class="card-body">
+          <h5 class="card-title">{{ post.title }}</h5>
+          <p class="card-text">{{ post.content|truncatechars:150 }}</p>
+        </div>
+        <label for="post_{{ post.uuid }}">
+          <div class="card-footer d-flex justify-content-between align-items-center">
+              <input type="checkbox" id="post_{{ post.uuid }}" name="selected_post" value="{{ post.uuid }}">
+            <small class="text-muted">{{ post.created_at|naturaltime }}</small>
+          </div>
+        </label>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">{{ post.created_at|naturaltime }}</small>
+    </div>
+    {% endfor %}
+  </div>
+</form>
+
+<!-- Add New Post Modal -->
+<div class="modal fade" id="addNewPost" tabindex="-1" aria-labelledby="addNewPostLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addNewPostLabel">{% trans "Yeni Post Ekle" %}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="addNewPostForm" method="post" enctype="multipart/form-data">{% csrf_token %}
+          {{ form.as_p }}
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans "Kapat" %}</button>
+        <button type="submit" class="btn btn-success" form="addNewPostForm" name="new_post">{% trans "Ekle" %}</button>
       </div>
     </div>
   </div>
-  {% endfor %}
 </div>
-
 {% endblock body %}
